--- a/style.css
+++ b/style.css
@@ -9,3 +9,27 @@ body{
 
     width: 100%;
 }
+
+.card {
+    height: inherit;
+    background-color: rgb(22, 160, 160);
+    margin: 20px;
+    border-radius: 5px;
+    color: white;
+    border: rgb(66, 66, 66) solid 1px;
+    text-align: center;
+}
+
+.tempDiv {
+    font-size: 18px; 
+    font-weight: bolder; 
+    color:rgb(49, 49, 49);
+    margin-top: 8px;;
+
+}
+
+.windSpeedDiv {
+    font-size: 12px; 
+    font-weight: bolder; 
+    color:rgb(49, 49, 49);
+}
