--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html {
+    font-family: GillSans, Calibri, Trebuchet, sans-serif;
+    font-size: 20px;
+  }
+
 body{
     background-image: url("assets/nationalpark.jpg");
 }
@@ -16,7 +21,9 @@ body{
 .collapsible-body{
     background-color: rgba(255,255,255,.5)
 }
-
+.input-field{
+    margin-top: .5rem;
+}
 .card {
     height: inherit;
     background-color: rgb(22, 160, 160);
