--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html {
+    font-family: GillSans, Calibri, Trebuchet, sans-serif;
+    font-size: 20px;
+  }
+
 body{
     background-image: url("assets/nationalpark.jpg");
 }
