--- a/style.css
+++ b/style.css
@@ -19,7 +19,9 @@ body{
     
 }
 .collapsible-body{
-    background-color: rgba(255,255,255,.5)
+    background-color: rgba(255,255,255,.5);
+    max-height: 50vh;
+    overflow: auto;
 }
 .input-field{
     margin-top: .5rem;
