--- a/style.css
+++ b/style.css
@@ -13,7 +13,21 @@ body{
 .stateDropdown{
     box-shadow: 2px 5px lightgray;
     width: 100%;
+    animation-duration: 3s;
+    animation-name: slidein;
 }
+@keyframes slidein {
+    from {
+      margin-left: 100%;
+      width: 250%; 
+    }
+  
+    to {
+      margin-left: 0%;
+      width: 100%;
+    }
+  }
+
 .collapsibleDiv{
     width: 100%;
     
