updated all pages

--- a/style.css
+++ b/style.css
@@ -7,13 +7,17 @@ body{
     background-image: url("assets/nationalpark.jpg");
 }
 
+.btn {
+    background-color: orange;
+}
+
 .container{
     padding: 30px;
 }
 .stateDropdown{
     box-shadow: 2px 5px lightgray;
     width: 100%;
-    animation-duration: 3s;
+    animation-duration: 1s;
     animation-name: slidein;
 }
 @keyframes slidein {
